# QuteSerial

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  QuteSerial.desktop  QuteSerial.pro  README.md
CI/: travis.before_install.sh  travis.install.sh  travis.linux.before_install.sh  travis.linux.install.sh  travis.osx.before_install.sh  travis.osx.install.sh
resources/: icons.qrc
sources/: .quteserial.cpp.swp  .txwidget.h.swp  macros.cpp  macros.h  macros.ui  main.cpp  qhexview.cpp  qhexview.h  quteserial.cpp  quteserial.h  rxwidget.cpp  rxwidget.h  rxwidget.ui  txwidget.cpp  txwidget.h  txwidget.ui
ui/: quteserial.ui
